# capella-rm-bridge

./: .buildinfo  .git_archival.txt  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  changeset.html  genindex.html  index.html  objects.inv  polarion.md  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  snapshot.html
.github/workflows/: build-test-publish.yml  docs.yml  lint.yml
_sources/code/: capella_rm_bridge.changeset.rst.txt  capella_rm_bridge.rst.txt  modules.rst.txt  tests.rst.txt
capella_rm_bridge/: __init__.py  __main__.py  auditing.py  load.py
capella_rm_bridge/changeset/: __init__.py  actiontypes.py  change.py  find.py  snapshot_input.schema.json
ci-templates/: gitlab.yml
code/: capella_rm_bridge.changeset.html  capella_rm_bridge.html  modules.html  tests.html
docs/: Makefile  make.bat
docs/api/: .project  rm-bridge.afm  rm-bridge.aird  rm-bridge.capella
docs/source/: changeset.rst  conf.py  index.rst  snapshot.rst
docs/source/_static/img/: capella_migration.png.license
docs/source/examples/: 1 Access and change Auditing.ipynb
examples/: showcase.ipynb  showcase_changeset.ipynb
examples/model/: RM Bridge Show.aird  RM Bridge Show.capella
rm_bridge/: __init__.py  __main__.py  auditing.py  load.py  types.py
rm_bridge/changeset/: __init__.py  actiontypes.py  change.py  find.py  snapshot_input.schema.json
rm_bridge/model_modifier/: apply_change.py
rm_bridge/model_modifier/changeset/: __init__.py  actiontypes.py  change.py  find.py
tests/: __init__.py  conftest.py  test_apply_change.py  test_auditing.py  test_changeset.py
tests/data/: config.yaml  export_tracker_snapshot_expected.yaml  export_tracker_snapshot_expected_timezone.yaml  get_tracker_content_expected.yaml  patch_actions_expected.yaml  snapshot.yaml  snapshot1.yaml  snapshot2.yaml
tests/data/changesets/: create.yaml  delete.yaml  mod.yaml
tests/data/model/: .project  RM Bridge.aird  RM Bridge.capella  RM Bridge.capella.license
tests/data/snapshots/: snapshot.yaml  snapshot1.yaml  snapshot2.yaml
